--- a/frontend/src/components/app/App.css
+++ b/frontend/src/components/app/App.css
@@ -35,6 +35,7 @@
 
 .listTitle {
   margin-left:40%;
+  font-size: 30px;
 }
 
 .carList {
@@ -45,8 +46,8 @@
 }
 
 .image {
-  width: 370px;
-  height: 270px;
+  width: 550px;
+  height: 330px;
 }
 
 .homeButton {
@@ -71,6 +72,10 @@
   flex-direction: row;
   justify-content: center;
   align-items: center
+}
+
+.imagemDiv {
+  margin-top: 20px;
 }
 
 .gridItem {
